deployments/kubernetes/local/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dca
  labels:
    app: dca
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: dca
